--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="icon" href="/src/img/faviconEmanueleMaso.ico" />
   {% include head.html %}
   <body>
       {% include header.html %}
