--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div >
   <div class="header">
       <h1>
-        <span class="site-title">{{site.username}}</span>
+        <span class="site-title">{{site.username}} CIAO</span>
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
