--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         <a aria-label="Send email" href="mailto:emanuele.maso97@gmail.com"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Instagram" target="" href="https://www.instagram.com/clarkstoro/"><i class="icon fa fa-instagram" aria-hidden="true"></i></a>
         <a aria-label="My Github" target="_blank" href="https://github.com/ClarkStoro"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
-        <a aria-label="My CV" target="My CV" href="/src/files/MyCV.pdf"><i class="icon fa fa-file" aria-hidden="true"></i></a>
+        <a aria-label="My CV" target="My CV" href="/src/CV EmanueleMaso.pdf"><i class="icon fa fa-file" aria-hidden="true"></i></a>
     </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
