--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,9 +6,9 @@
       </h1>
       <div class="header-icons">
         <a aria-label="Send email" title="Send e-mail" href="mailto:emanuele.maso97@gmail.com"><i class="icon fa fa-envelope"></i></a>
-        <a aria-label="My Instagram" target="_blank" href="https://www.instagram.com/clarkstoro/"><i class="icon fa fa-instagram" aria-hidden="true"></i></a>
-        <a aria-label="My Github" target="_blank" href="https://github.com/ClarkStoro"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
-        <a aria-label="My CV" target="My CV" href="CV-Emanuele-Maso.pdf"><i class="icon fa fa-file" aria-hidden="true"></i></a>
+        <a aria-label="My Instagram" title="My Instagram" target="_blank" href="https://www.instagram.com/clarkstoro/"><i class="icon fa fa-instagram" aria-hidden="true"></i></a>
+        <a aria-label="My Github" title="My Github" target="_blank" href="https://github.com/ClarkStoro"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+        <a aria-label="My CV" title="My CV" target="_blank" href="CV-Emanuele-Maso.pdf"><i class="icon fa fa-file" aria-hidden="true"></i></a>
     </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
