--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
-        <a aria-label="Send email" title="Send e-mail" href="mailto:emanuele.maso97@gmail.com"><i class="icon fa fa-envelope"></i></a>
+        <a aria-label="Send e-mail to emanuele.maso97@gmail.com" title="Send e-mail" href="mailto:emanuele.maso97@gmail.com"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Instagram" title="My Instagram" target="_blank" href="https://www.instagram.com/clarkstoro/"><i class="icon fa fa-instagram" aria-hidden="true"></i></a>
         <a aria-label="My Github" title="My Github" target="_blank" href="https://github.com/ClarkStoro"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
         <a aria-label="My CV" title="My CV" target="_blank" href="CV-Emanuele-Maso.pdf"><i class="icon fa fa-file" aria-hidden="true"></i></a>
