--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,4 +6,5 @@
 <script src="{{ "/assets/js/sweet-scroll.min.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/assets/js/main.js" | prepend: site.baseurl }}"></script>
 <link href="/src/img/faviconEmanueleMaso.ico" rel="icon">
+<link href="{{ "/src/img/mountains.jpg" | prepend: site.baseurl }}" rel="icon">
 {% include google-analytics.html %}
