--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,6 @@
 <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script src="{{ "/assets/js/sweet-scroll.min.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/assets/js/main.js" | prepend: site.baseurl }}"></script>
-<link href="/src/img/faviconEmanueleMaso.ico" rel="icon">
-<link href="{{ "/src/img/mountains.jpg" | prepend: site.baseurl }}" rel="icon">
+<link href="/src/img/faviconEmanueleMaso.ico" rel="icon" />
+<link href="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" rel="icon" />
 {% include google-analytics.html %}
