--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -8,7 +8,8 @@
   <div class="contents">
     <h3> Smart Thermostat </h3>
     <ul>
-      <li> Featured Skills</li>
+      <li> React Native development</li>
+      <li> Firebase Realtime Database </li>
     </ul>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     <a class="project-link" href="https://github.com/ClarkStoro/Smart-Thermostat">Check it out</a>
@@ -21,7 +22,10 @@
   <div class="contents-right">
     <h3> Drink Machine </h3>
     <ul>
-      <li> Featured Skills</li>
+      <li> Java for Android Studio for the app development</li>
+      <li> MySQL Database from Altervista</li>
+      <li> WordPress site development</li>
+      <li> C language to control the machine</li>
     </ul>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     <a class="project-link" href="http://drinkmachine.altervista.org">Check it out</a>
