--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -11,7 +11,7 @@
       <li> React Native development</li>
       <li> Firebase Realtime Database </li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p>This IOT project was realised by me and my roomate and consist in a smart thermostat which works with Firebase database. The app that I built allows you to control the thermostat.</p>
     <a class="project-link" href="https://github.com/ClarkStoro/Smart-Thermostat">Check it out</a>
   </div>
 </div>
@@ -27,7 +27,7 @@
       <li> WordPress site development</li>
       <li> C language to control the machine</li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p>This project consist on a machine which is able to prepares your favorite cocktails by ordering them from your Android smartphone. You can also create new cocktails by using the Windows program. This project was created for high school graduation exam. </p>
     <a class="project-link" href="http://drinkmachine.altervista.org">Check it out</a>
   </div>
 </div>
