--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -12,7 +12,7 @@
       <li> Firebase Realtime Database </li>
     </ul>
     <p>This IOT project was realised by me and my roomate and consist in a smart thermostat which works with Firebase database. The app that I built allows you to control the thermostat.</p>
-    <a class="project-link" href="https://github.com/ClarkStoro/Smart-Thermostat">Check it out</a>
+    <a class="project-link" target="_blank" href="https://github.com/ClarkStoro/Smart-Thermostat">Check it out</a>
   </div>
 </div>
 <div class="user-projects">
@@ -28,6 +28,6 @@
       <li> C language to control the machine</li>
     </ul>
     <p>This project consist on a machine which is able to prepares your favorite cocktails by ordering them from your Android smartphone. You can also create new cocktails by using the Windows program. This project was created for high school graduation exam. </p>
-    <a class="project-link" href="http://drinkmachine.altervista.org">Check it out</a>
+    <a class="project-link" target="_blank" href="http://drinkmachine.altervista.org">Check it out</a>
   </div>
 </div>
