--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,7 @@
     <div class="tech">
       <h2>Design</h2>
       <i class="devicon-html5-plain-wordmark"></i>
-      <i class="devicon-bootstrap-plain-wordmark colored"></i>
+      <i class="devicon-css3-plain-wordmark colored"></i>
       <i class="devicon-wordpress-plain-wordmark colored"></i>
       <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
         Vinyl XOXO lumbersexual</p>
@@ -23,7 +23,7 @@
       <h2>Tools</h2>
       <i class="devicon-git-plain"></i>
       <i class="devicon-visualstudio-plain colored"></i>
-      <i class="devicon-photoshop-line colored"></i>
+      <i class="devicon-photoshop-plain colored"></i>
       <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
         Vinyl XOXO lumbersexual</p>
     </div>
