--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,23 +8,20 @@
       <i class="devicon-html5-plain-wordmark"></i>
       <i class="devicon-css3-plain-wordmark colored"></i>
       <i class="devicon-wordpress-plain-wordmark colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p>I worked with diffrent way to design from HTML5 + CSS3 or XML to WordPress themes and plugins </p>
     </div>
     <div class="tech">
       <h2>Code</h2>
       <i class="devicon-javascript-plain colored"></i>
       <i class="devicon-react-original-wordmark colored"></i>
       <i class="devicon-android-plain-wordmark colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p>I love JS because of React Native but I also like Java especially for developing Android Apps.</p>
     </div>
     <div class="tech">
       <h2>Tools</h2>
       <i class="devicon-git-plain"></i>
       <i class="devicon-visualstudio-plain colored"></i>
       <i class="devicon-photoshop-plain colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p>I usually use Git version control system with GitHub or GitLab. I like Visual Studio and VSCode and I can use the main Adobe programs.</p>
     </div>
 </div>
