--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,7 @@
       <i class="devicon-html5-plain-wordmark"></i>
       <i class="devicon-css3-plain-wordmark colored"></i>
       <i class="devicon-wordpress-plain-wordmark colored"></i>
-      <p>I worked with diffrent way to design from HTML5 + CSS3 or XML to WordPress themes and plugins </p>
+      <p>I worked with different way to design from HTML5 + CSS3 or XML to WordPress themes and plugins.</p>
     </div>
     <div class="tech">
       <h2>Code</h2>
