--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,8 @@
 <div id="particles-js">
   <div class="header">
+      <div>
+        <img alt="mountains" src="{{ "/assets/img/EmanueleMaso.jpg" | prepend: site.baseurl }}" />
+      </div>
       <h1>
         <span class="site-title">{{site.username}}</span>
         <span class="site-description">{{site.user_title}}</span>
