--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div id="particles-js">
   <div class="header">
       <div class="tech">
-        <img alt="mountains" src="{{ "/assets/img/EmanueleMaso.jpg" | prepend: site.baseurl }}" />
+        <a alt="mountains" src="{{ "/assets/img/EmanueleMaso.jpg" | prepend: site.baseurl }}" />
       </div>
       <h1>
         <span class="site-title">{{site.username}}</span>
