--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div id="particles-js">
   <div class="header">
-      <div class="header-icons">
+      <div>
         <img alt="" src="{{ "/assets/img/EmanueleMaso.png" | prepend: site.baseurl }}" />
       </div>
       <h1>
