--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div id="particles-js">
   <div class="header">
       <div>
-        <img alt="" src="{{ "/assets/img/EmanueleMaso.png" | prepend: site.baseurl }}" />
+        <img alt="ema" src="{{ "/assets/img/EmanueleMaso.png" | prepend: site.baseurl }}" />
       </div>
       <h1>
         <span class="site-title">{{site.username}}</span>
