--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div id="particles-js">
   <div class="header">
-      <div>
+      <div class="images-left">
         <img alt="ema" src="{{ "/assets/img/EmanueleMaso.png" | prepend: site.baseurl }}" />
       </div>
       <h1>
