--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
         <img alt="ema" src="{{ "/assets/img/EmanueleMaso.png" | prepend: site.baseurl }}" />
       </div>
       <h1>
-        <span class="site-title">{{site.username}}</span>
+        <span class="site-title">{{site.username}} cia</span>
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
