--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div id="particles-js">
   <div class="header">
       <h1>
-        <div>
+        <div class="header-icons">
           <img alt="ema" src="{{ "/assets/img/EmanueleMaso.png" | prepend: site.baseurl }}" />
         </div>
         <span class="site-title">{{site.username}} ciao</span>
