--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="header">
       <h1>
         <div class="header-icons">
-          <img alt="ema" src="{{ "/assets/img/EmanueleMaso.png" | prepend: site.baseurl }}" />
+          <i alt="ema" src="{{ "/assets/img/EmanueleMaso.png" | prepend: site.baseurl }}" />
         </div>
         <span class="site-title">{{site.username}} ciao</span>
         <span class="site-description">{{site.user_title}}</span>
