--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <div id="particles-js">
   <div class="header">
       <h1>
-        <div class="header-icons">
-          <i alt="ema" src="{{ "/assets/img/EmanueleMaso.png" | prepend: site.baseurl }}" />
+        <div class="down">
+          <img alt="ema" src="{{ "/assets/img/EmanueleMaso.png" | prepend: site.baseurl }}" />
         </div>
         <span class="site-title">{{site.username}} ciao</span>
         <span class="site-description">{{site.user_title}}</span>
