--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <div id="particles-js">
   <div class="header">
+      <div class="images-left">
+        <img alt="ema" src="{{ "/assets/img/EmanueleMaso.png" | prepend: site.baseurl }}" />
+      </div>
       <h1>
-        <div class="down">
-          <img alt="ema" src="{{ "/assets/img/EmanueleMaso.png" | prepend: site.baseurl }}" />
-        </div>
         <span class="site-title">{{site.username}} ciao</span>
         <span class="site-description">{{site.user_title}}</span>
       </h1>
