--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,10 @@
 <div id="particles-js">
   <div class="header">
+    <div class="user-projects">
       <div class="images-left">
         <img alt="ema" src="{{ "/assets/img/EmanueleMaso.png" | prepend: site.baseurl }}" />
       </div>
+    </div>
       <h1>
         <span class="site-title">{{site.username}} ciao</span>
         <span class="site-description">{{site.user_title}}</span>
