--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -55,6 +55,26 @@
   }
 }
 
+
+.contents-center {
+  @media only screen and (min-width: $cut) {
+    float: center;
+    margin-top: -5%;
+    width: 48%;
+  }
+}
+.images-right {
+  @media only screen and (min-width: $cut) {
+    float: right;
+    width: 48%;
+  }
+  img {
+    @media only screen and (min-width: $cut) {
+      float: center;
+    }
+  }
+}
+
 .images-left {
   @media only screen and (min-width: $cut) {
     float: left;
