--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -67,6 +67,7 @@
   @media only screen and (min-width: $cut) {
     float: center;
     width: 5%;
+    margin: 40
   }
   img {
     @media only screen and (min-width: $cut) {
