--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,12 @@
 <div id="particles-js">
   <div class="header">
-   <div class="user-project">
+   <div class="user-photo">
       <div class="images-center">
         <img alt="ema" src="{{ "/assets/img/EmanueleMaso.png" | prepend: site.baseurl }}" />
       </div>
     </div>
       <h1>
-        <span class="site-title">{{site.username}}</span>
+        <span class="site-title">{{site.username}}x</span>
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
