--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div id="particles-js">
   <div class="header">
-   <div class="user-project">
+   <div class="user-photo">
       <div class="images-center">
         <img alt="ema" src="{{ "/assets/img/EmanueleMaso.png" | prepend: site.baseurl }}" />
       </div>
