--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
       </div>
     </div>
       <h1>
-        <span class="site-title">{{site.username}}4s</span>
+        <span class="site-title">{{site.username}}s</span>
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
