--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="header">
    <div class="user-photo">
       <div class="images-center">
-        <img alt="ema" src="{{ "/assets/img/EmanueleMaso.png" | prepend: site.baseurl }}" />
+        <img alt="ema" src="{{ "/assets/img/EmanueleMaso.png"}}" />
       </div>
     </div>
       <h1>
