--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,8 @@
 <div id="particles-js">
   <div class="header">
+      <div class="images-right">
         <img alt="ema" src="{{ "/assets/img/EmanueleMaso.png"}}" />  
+      </div>
       <h1>
         <span class="site-title">{{site.username}}</span>
         <span class="site-description">{{site.user_title}}</span>
