--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,12 @@
 <div id="particles-js">
   <div class="header">
+    <div class="user-projects">
       <div class="images-right">
         <img alt="ema" src="{{ "/assets/img/EmanueleMaso.png"}}" />  
       </div>
+    </div>
       <h1>
-        <span class="site-title">{{site.username}}ut</span>
+        <span class="site-title">{{site.username}}</span>
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
