--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -70,7 +70,7 @@
     text-align: center;
     float: left;
     width: 20%;
-    margin: 90px;
+    margin-top: 50%;
   }
   img {
     @media only screen and (min-width: $cut) {
