--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -89,6 +89,30 @@
   }
 }
 
+
+.header-photo {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  
+    text-align: center;
+    
+    width: 20px;
+    height: 20px;
+    font-size: 20px;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 50%;
+    border: 2px solid #FFF;
+    
+    @media only screen and (min-width:$cut) {
+      width: 35px;
+      height: 35px;
+      font-size: 35px;
+    }
+  
+}
+
 .down {
   color: #FFF;
   position: absolute;
