--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <div id="particles-js">
   <div class="header">
-    <div class="user-projects">
-      <div class="images-center">
+    <div class="header-photo">
+      
         <img alt="ema" src="{{ "/assets/img/EmanueleMaso.png"}}" />  
-      </div>
+      
     </div>
       <h1>
         <span class="site-title">{{site.username}}s</span>
