--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -94,7 +94,7 @@
   display: flex;
   justify-content: center;
   text-align: center;
-  
+  .img{
     text-align: center;
     
     width: 20px;
@@ -110,7 +110,7 @@
       height: 35px;
       font-size: 35px;
     }
-  
+  }
 }
 
 .down {
