--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -95,7 +95,7 @@
   justify-content: center;
   text-align: center;
   .img{
-    text-align: center;
+    text-align: right;
     
     width: 20px;
     height: 20px;
