--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="header">
     <div class="header-photo">
       
-        <img alt="ema" src="{{ "/assets/img/EmanueleMaso.png"}}" />  
+      <i alt="ema" src="{{ "/assets/img/EmanueleMaso.png"}}" ></i>  
       
     </div>
       <h1>
