--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,12 @@
 <div id="particles-js">
   <div class="header">
-    <div class="header-photo">
+    <div class="photo">
       
-      <i alt="ema" src="{{ "/assets/img/EmanueleMaso.png"}}" ></i>  
+      <img alt="ema" src="{{ "/assets/img/EmanueleMaso.png"}}" /> 
       
     </div>
       <h1>
-        <span class="site-title">{{site.username}}kjiln</span>
+        <span class="site-title">{{site.username}}</span>
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
