--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -93,8 +93,8 @@
     max-width: 100%;
     height: auto;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 
