--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,12 @@
 <div id="particles-js">
   <div class="header">
-    <div>
+    
       
       <img alt="ema" class="photo" src="{{ "/assets/img/EmanueleMaso.png"}}" /> 
       
-    </div>
+    
       <h1>
-        <span class="site-title">{{site.username}}s</span>
+        <span class="site-title">{{site.username}}</span>
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
