--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -93,9 +93,7 @@
     max-width: 100%;
     height: auto;
     display: block;
-    margin-left: 20%;
-    margin-right: 70%;
-    
+    padding: 25%;
 }
 
 
