--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <div id="particles-js">
   <div class="header">
     
-      
+      <div style="margin:406px">
       <img alt="ema" class="photo" src="{{ "/assets/img/EmanueleMaso.png"}}" /> 
-      
+    </div>
     
       <h1>
         <span class="site-title">{{site.username}}s</span>
