--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div id="particles-js">
   <div class="header">
     
-      <div style="margin-left:40%, background-color: #fff">
+      <div style="background-color: #fff">
       <img alt="ema" class="photo" src="{{ "/assets/img/EmanueleMaso.png"}}" /> 
     </div>
     
