--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div id="particles-js">
   <div class="header">
     
-      <div style="background-color: #fff", margin: 200px">
+      <div style="background-color: #ff0000", margin: 100px">
       <img alt="ema" class="photo" src="{{ "/assets/img/EmanueleMaso.png"}}" /> 
     </div>
     
