--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div id="particles-js">
   <div class="header">
     
-      <div style="background-color: #ffffff; padding-bottom: 500px">
+      <div style="padding-bottom: 500px; background-color: #ffffff;">
       <img alt="ema" class="photo" src="{{ "/assets/img/EmanueleMaso.png"}}" /> 
     </div>
     
