--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div id="particles-js">
   <div class="header">
     
-      <div style="padding-top: 15%; background-color: #00ff00;">
+      <div style="padding-top: 45%; background-color: #00ffff;">
       <img alt="ema" class="photo" src="{{ "/assets/img/EmanueleMaso.png"}}" /> 
     </div>
     
