--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <div id="particles-js">
   <div class="header">
     
-      <div style="width: 20%; padding-top: 45%; background-color: #0000ff;">
-      <img alt="ema" class="photo" src="{{ "/assets/img/EmanueleMaso.png"}}" /> 
+      <div style="width: 20%; text-align: center; padding-top: 45%; background-color: #ff00ff;">
+      <img alt="ema" class="photo" src="{{ "/assets/img/EmanueleMaso.png"}}"  style="width: 20%"/> 
     </div>
     
       <h1>
