--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div id="particles-js">
   <div class="header">
     
-      <div style="width: 40%; text-align: center; padding-top: 45%; background-color: #ff0000;">
+      <div style=" background-color: #ff0000;">
       <img alt="ema" class="photo" src="{{ "/assets/img/EmanueleMaso.png"}}"  style="width: 100%"/> 
     </div>
     
