--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <div id="particles-js">
   <div class="header">
-    <div style="text-align:center;>
-      <div style="width: 50%; height: 50%; text-align:center; background-color: #ff0000;">
-      <img alt="ema" class="photo" src="{{ "/assets/img/EmanueleMaso.png"}}"  style="width: 100%"; text-align:center; display: inline-block;margin: 0 auto;"/> 
-    </div>
-</div>
+   
+      <div style="width: 50%; height: 50%; text-align:center; background-color: #ffFF00;">
+        <img alt="ema" class="photo" src="{{ "/assets/img/EmanueleMaso.png"}}"  style="width: 100%"; text-align:center; display: inline-block;margin: 0 auto;"/> 
+      </div>
+      
       <h1>
         <span class="site-title">{{site.username}}</span>
         <span class="site-description">{{site.user_title}}</span>
