--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div id="particles-js">
   <div class="header">
    
-      <div style="width: 50%; height: 50%; text-align:center; background-color: #ffFF00;">
+      <div style="width: 50%; height: 50%; margin: 0 auto; background-color: #ffFF00;">
         <img alt="ema" class="photo" src="{{ "/assets/img/EmanueleMaso.png"}}"  style="width: 100%"; text-align:center; display: inline-block;margin: 0 auto;"/> 
       </div>
       
