--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="header">
    
       <div style="width: 50%; height: 50%; margin: 0 auto; background-color: #ffF000;">
-        <img alt="ema" class="photo" src="{{ "/assets/img/EmanueleMaso.png"}}"  style="width: 100%"; text-align:center; display: inline-block;margin: 0 auto;"/> 
+        <img alt="ema" class="photo" src="{{ "/assets/img/EmanueleMaso.png"}}"  style="background-color: #0fF000;width: 100%"; text-align:center; display: inline-block;margin: 0 auto;"/> 
       </div>
       
       <h1>
