--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -17,6 +17,7 @@
   z-index: 1;
   text-align: center;
   color:#FFF;
+  background-color: #ff00ff;
   position: absolute;
   top: 10%;
   left: 50%;
