--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
       </div>
       
       <h1>
-        <span class="site-title" style="margin-top: -70px;">{{site.username}}j</span>
+        <span class="site-title" style="margin-top: -70px;">{{site.username}}</span>
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
