--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -95,7 +95,10 @@
     max-width: 100%;
     height: auto;
     display: block;
-    
+    width: 100%"; 
+    text-align:center;
+    display: inline-block;
+    margin: 0 auto;
 }
 
 
