--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -25,6 +25,7 @@
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   .site-title {
+    margin-top: -70px;
     background-color: #f00f0f;
     font-size: 50px;
     display: block;
