--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -92,6 +92,13 @@
   }
 }
 
+.headerPhoto{
+  width: 50%;
+  height: 50%;
+  margin: 0 auto;
+  margin-top: -30px;
+}
+
  .photo{
     max-width: 100%;
     height: auto;
