--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div id="particles-js">
   <div class="header">
    
-      <div class="headerPhoto" style="width: 50%; height: 50%; background-color: #fff000">
+      <div class="headerPhoto" style="width: 50%; height: 50%; margin: 0 auto; margin-top: -30px; background-color: #fff000">
         <img alt="ema" class="photo" src="{{ "/assets/img/EmanueleMaso.png"}}"  style="width: 100%";"/> 
       </div>
       
