--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,12 @@
 <div id="particles-js">
   <div class="header">
    
-      <div class="headerPhoto" style="width: 50%; height: 50%; margin: 0 auto; margin-top: -30px; background-color: #fff000">
+      <div class="headerPhoto" style="width: 50%; height: 50%; margin: 0 auto; margin-top: -30px; background-color: #ff0000">
         <img alt="ema" class="photo" src="{{ "/assets/img/EmanueleMaso.png"}}"  style="width: 100%";"/> 
       </div>
       
       <h1>
-        <span class="site-title">{{site.username}}</span>
+        <span class="site-title" style="margin-top: -70px;">{{site.username}}</span>
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
