--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,7 +3,7 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/SmartThermostat.jpg" | prepend: site.baseurl }}" />
+    <img alt="Smart Thermostat" src="{{ "/assets/img/SmartThermostat.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3> Smart Thermostat </h3>
@@ -17,7 +17,7 @@
 </div>
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/DrinkMachine.jpg" | prepend: site.baseurl }}" />
+    <img alt="Drink Machine" src="{{ "/assets/img/DrinkMachine.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Drink Machine </h3>
@@ -27,7 +27,7 @@
       <li> WordPress site development</li>
       <li> C language to control the machine</li>
     </ul>
-    <p>This project consist on a machine which is able to prepares your favorite cocktails by ordering them from your Android smartphone. You can also create new cocktails by using the Windows program. This project was created for high school graduation exam. </p>
+    <p>This project consist on a machine which is able to prepare your favorite cocktails by ordering them from your Android smartphone. You can also create new cocktails by using the Windows program. This project was created for high school graduation exam. </p>
     <a class="project-link" target="_blank" href="http://drinkmachine.altervista.org">Check it out</a>
   </div>
 </div>
