--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,7 +2,7 @@
   <h1> Featured Projects </h1>
 </div>
 <div class="user-projects">
-  <div class="images-right" style="margin 0 auto">
+  <div class="images-right" style="margin 0 auto; text-align:center; background-color: #ff0000">
     <img alt="Smart Thermostat" src="{{ "/assets/img/SmartThermostat.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
