--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,7 +5,7 @@
   <div class="images-right" style="margin 0 auto; text-align:center; background-color: #ff0000">
     <img alt="Smart Thermostat" src="{{ "/assets/img/SmartThermostat.jpg" | prepend: site.baseurl }}" />
   </div>
-  <div class="contents">
+  <div class="contents" style="margin 0 auto; text-align:center; background-color: #ff0000">
     <h3> Smart Thermostat </h3>
     <ul>
       <li> React Native development</li>
