--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,8 +1,8 @@
 <div class="user-details">
   <h1> Featured Projects </h1>
 </div>
-<div class="user-projects" style="margin: 0 auto; background-color: #ff0ff0">
-  <div class="images-right" style="margin: 0 auto; text-align:center; background-color: #ff0000">
+<div class="user-projects" style="background-color: #ff0000">
+  <div class="images-right" style="margin-top: 10%; background-color: #ff0000">
     <img alt="Smart Thermostat" src="{{ "/assets/img/SmartThermostat.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents" style="margin: 0 auto; background-color: #ff0000">
