--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,10 +2,10 @@
   <h1> Featured Projects </h1>
 </div>
 <div class="user-projects" style="background-color: #ff0000">
-  <div class="images-right" style="margin-top: 10%; background-color: #ff0000">
+  <div class="images-right" style="margin-top: 10%;>
     <img alt="Smart Thermostat" src="{{ "/assets/img/SmartThermostat.jpg" | prepend: site.baseurl }}" />
   </div>
-  <div class="contents" style="margin: 0 auto; background-color: #ff0000">
+  <div class="contents">
     <h3> Smart Thermostat </h3>
     <ul>
       <li> React Native development</li>
