--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,7 +2,7 @@
   <h1> Featured Projects </h1>
 </div>
 <div class="user-projects" style="background-color: #ff0000">
-  <div class="images-right" style="margin-top: 10%;>
+  <div class="images-right" style="margin-top: 10%;">
     <img alt="Smart Thermostat" src="{{ "/assets/img/SmartThermostat.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
