--- a/_includes/about.html
+++ b/_includes/about.html
@@ -22,6 +22,6 @@
       <i class="devicon-git-plain"></i>
       <i class="devicon-visualstudio-plain colored"></i>
       <i class="devicon-photoshop-plain colored"></i>
-      <p>I usually use Git with GitHub or GitLab. I really like VS, VSCode and I know hot to use the main Adobe programs.</p>
+      <p>I usually use Git with GitHub or GitLab. I really like VS, VSCode and I know how to use the main Adobe programs.</p>
     </div>
 </div>
