--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -27,7 +27,7 @@
       <li> WordPress site development</li>
       <li> C language to control the machine</li>
     </ul>
-    <p>This project consist on a machine which is able to prepare your favorite cocktails by ordering them from your Android smartphone. This project was created as a part of my high school graduation exam. </p>
+    <p>This project consist in a machine which is able to prepare your favorite cocktails by ordering them from your Android smartphone. This project was created as a part of my high school graduation exam. </p>
     <a class="project-link" target="_blank" href="http://drinkmachine.altervista.org">Check it out</a>
   </div>
 </div>
