--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
         <a aria-label="Send email" title="Send e-mail to emanuele.maso97@gmail.com" href="mailto:emanuele.maso97@gmail.com"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="Instagram" title="Instagram" target="_blank" href="https://www.instagram.com/clarkstoro/"><i class="icon fa fa-instagram" aria-hidden="true"></i></a>
         <a aria-label="Github" title="Github" target="_blank" href="https://github.com/ClarkStoro"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
-        <a aria-label="Play Store" title="Play Store" target="_blank" href="https://play.google.com/store/apps/developer?id=Emanuele+Maso"><i class="fa fa-android" aria-hidden="true"></i></a>
+        <a aria-label="Play Store" title="Play Store" target="_blank" href="https://play.google.com/store/apps/developer?id=Emanuele+Maso"><i class="icon fa fa-android" aria-hidden="true"></i></a>
         <a aria-label="My CV" title="My CV" target="_blank" href="{{"assets/CV-Emanuele-Maso.pdf"}}"><i class="icon fa fa-file" aria-hidden="true"></i></a>
     </div>
       <div class="header-links">
