--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,6 +2,20 @@
   <h1> Featured Projects </h1>
 </div>
 <div class="user-projects">
+  <div class="images-left" style="margin-top: 5%;">
+    <img alt="Info Gardaland" src="{{ "/assets/img/SmartThermostat.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Info Gardaland </h3>
+    <ul>
+      <li> Android development</li>
+      <li> Firebase Analytics</li>
+    </ul>
+    <p>This app was made by me and Alberto Caliman since the official one was completely unusable.<\n>After 2 months of positive comments and a deliberating article from the big tech magazine TecnoAndroid, we were contacted from the resort that told us to remove the app from the store since they did not appreciate our way of thinking the park.</p>
+    <a class="project-link" target="_blank" href="https://github.com/ClarkStoro/Smart-Thermostat-App">Read the article</a>
+  </div>
+</div>
+<div class="user-projects">
   <div class="images-right" style="margin-top: 5%;">
     <img alt="Smart Thermostat" src="{{ "/assets/img/SmartThermostat.jpg" | prepend: site.baseurl }}" />
   </div>
