--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,7 +5,7 @@
   <div class="images-left" style="margin-top: 5%;">
     <img alt="Info Gardaland" src="{{ "/assets/img/SmartThermostat.jpg" | prepend: site.baseurl }}" />
   </div>
-  <div class="contents">
+  <div class="contents-right">
     <h3> Info Gardaland </h3>
     <ul>
       <li> Android development</li>
