--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,7 +3,7 @@
 </div>
 <div class="user-projects">
   <div class="images-left" style="margin-top: 5%;">
-    <img alt="Info Gardaland" src="{{ "/assets/img/SmartThermostat.jpg" | prepend: site.baseurl }}" />
+    <img alt="Info Gardaland" src="{{ "/assets/img/InfoGardaland.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Info Gardaland </h3>
@@ -12,7 +12,7 @@
       <li> Firebase Analytics</li>
     </ul>
     <p>This app was made by me and Alberto Caliman since the official one was completely unusable.<\n>After 2 months of positive comments and a deliberating article from the big tech magazine TecnoAndroid, we were contacted from the resort that told us to remove the app from the store since they did not appreciate our way of thinking the park.</p>
-    <a class="project-link" target="_blank" href="https://github.com/ClarkStoro/Smart-Thermostat-App">Read the article</a>
+    <a class="project-link" target="_blank" href="https://www.tuttoandroid.net/applicazioni/tempi-attesa-attrazioni-gardaland-688357/">Read the article</a>
   </div>
 </div>
 <div class="user-projects">
