--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -11,7 +11,7 @@
       <li> Android development</li>
       <li> Firebase Analytics</li>
     </ul>
-    <p>This app was made by me and Alberto Caliman since the official one was completely unusable.<\n>After 2 months of positive comments and a deliberating article from the big tech magazine TecnoAndroid, we were contacted from the resort that told us to remove the app from the store since they did not appreciate our way of thinking the park.</p>
+    <p>This app was made by me and Alberto Caliman since the official one was completely unusable.\nAfter two months of positive comments and a deliberating article from the big tech magazine TecnoAndroid, we were contacted from the resort that told us to remove the app from the store since they did not appreciate our way of thinking the park.</p>
     <a class="project-link" target="_blank" href="https://www.tuttoandroid.net/applicazioni/tempi-attesa-attrazioni-gardaland-688357/">Read the article</a>
   </div>
 </div>
