--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,7 +2,7 @@
   <h1> Featured Projects </h1>
 </div>
 <div class="user-projects">
-  <div class="images-left" style="margin-top: 5%;">
+  <div class="images-left">
     <img alt="Info Gardaland" src="{{ "/assets/img/InfoGardaland.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
