--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,7 +15,7 @@
       <i class="devicon-javascript-plain colored"></i>
       <i class="devicon-react-original-wordmark colored"></i>
       <i class="devicon-android-plain-wordmark colored"></i>
-      <p>I love JS because of React Native but I also like Java especially for developing Android Apps.</p>
+      <p>I love Java and Kotlin especially for developing Android apps but I also like JS because of React Native.<p>
     </div>
     <div class="tech">
       <h2>Tools</h2>
